tests/mm0_mmu/fail/bad-sort312.mm0
-- bad modifier order
provable pure strict sort s312;